--- a/style.css
+++ b/style.css
@@ -1,7 +1,513 @@
+/* custom font */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
+/* variables */
+:root {
+  --color-primary: #f3fcf7;
+  --color-secondary: #ffffff;
+  --color-green: #06c167;
+  --color-black: #232323;
+}
+
+/* universal style */
 * {
   margin: 0;
   padding: 0;
+  font-family: Inter, system-ui, -apple-system;
   box-sizing: border-box;
+  background-color: var(--color-primary);
+  color: var(--color-black);
+}
+
+/* navbar  mobile */
+#menuToggle {
+  display: block;
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a {
+  text-decoration: none;
+  color: var(--color-black);
+  transition: color 0.3s ease;
+  &:hover {
+    color: var(--color-green);
+  }
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  -webkit-touch-callout: none;
+}
+
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: var(--color-green);
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  &:first-child {
+    transform-origin: 0% 0%;
+  }
+  &:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+}
+
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: var(--color-black);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+  position: absolute;
+  max-width: 400px;
+  width: 100vw;
+  max-height: 100vh;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  background: var(--color-primary);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menu li label {
+  cursor: pointer;
+}
+
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
+
+/* navbar desktop */
+.desktop-nav {
+  display: none;
+}
+
+/* hero section */
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 100px;
+  text-align: center;
+}
+
+.hero-text {
+  font-size: 80px;
+}
+
+.hero-desc {
+  margin: 22px 0;
+}
+
+.hero-btn {
+  background-color: var(--color-green);
+  color: var(--color-secondary);
+  padding: 20px;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  width: 80%;
+}
+
+.hero-btn img {
+  width: auto;
+  background: none;
+  padding-left: 5px;
+}
+
+.hero-company-desktop {
+  display: none;
+}
+
+.hero-company {
+  margin-top: 30px;
+  display: flex;
+}
+
+.hero-company img {
+  width: 30%;
+  margin: 20px;
+}
+
+.hero-divider,
+.services-divider {
+  opacity: 30%;
+  margin: 30px auto;
+  width: 85%;
+}
+
+.hero-overlap {
+  position: relative;
+}
+
+.overlap-1,
+.overlap-2 {
+  position: absolute;
+  border-radius: 20px;
+}
+
+.overlap-1 {
+  top: -148px;
+  left: 30%;
+}
+
+.overlap-2 {
+  top: -51px;
+  left: 30%;
+}
+
+/* services section */
+.services {
+  display: flex;
+  gap: 20px;
+  justify-content: space-around;
+}
+
+/* benefit section */
+.benefit,
+.benefit-2 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: var(--color-secondary);
+  background-image: url(./img/bg-2.png);
+  background-repeat: no-repeat;
+  background-size: 446px;
+  background-position: 52% -19%;
+  margin-bottom: 40px;
+}
+
+.benefit-1 {
+  width: 75%;
+  align-self: center;
+}
+
+.benefit-text {
+  margin-top: 70px;
+  text-align: center;
+}
+
+.benefit-text p,
+.variety .text p {
+  margin: 30px 0 10px 0;
+}
+
+.benefit-text h3,
+.variety .text h3 {
+  text-transform: capitalize;
+  font-size: 38px;
+  margin: 0 10px;
+}
+
+.benefit-text ul {
+  line-height: 30px;
+  margin: 30px 0 0 30%;
+  list-style-image: url(./img/tick.png);
+  font-size: 18px;
+  font-weight: 500;
+  text-align: start;
+}
+
+.benefit-2 .benefit-2 {
+  width: 70%;
+  align-self: center;
+}
+
+.benefit-text h4 {
+  font-size: 44px;
+  font-weight: 500;
+  margin-top: 28px;
+  color: var(--color-green);
+}
+
+.benefit-text h6 {
+  opacity: 50%;
+}
+
+.benefit-text button {
+  margin-top: 25px;
+}
+
+/* variety section */
+
+.variety .text {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.after-food {
+  padding: 35px;
+  align-self: start;
+  margin: 10px 0 10px 100px;
+  border: 1px solid var(--color-green);
+}
+
+.after-food h4 {
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
+.after-food p {
+  margin-top: 10px;
+}
+
+.after-food button {
+  outline: none;
+  border: 1px solid var(--color-green);
+  margin-top: 10px;
+  border-radius: 3px;
+  padding: 10px;
+  color: var(--color-green);
+}
+
+.cards-1,
+.cards-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.cards-1 {
+  margin-top: 10px;
+}
+
+.cards-1 >div> img,
+.cards-2 > img {
+  width: 400px;
+}
+
+/* product section */
+
+
+
+
+/* desktop design */
+
+@media screen and (min-width: 768px) {
+  /* navbar */
+  .mobile-nav {
+    display: none;
+  }
+
+  .desktop-nav {
+    margin: 30px 80px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .desktop-nav .logo {
+    width: 100px;
+  }
+
+  .desktop-nav .nav-list {
+    display: flex;
+    gap: 18px;
+    justify-content: space-between;
+    list-style-type: none;
+  }
+
+  .desktop-nav .nav-list a {
+    text-decoration: none;
+    &:hover {
+      color: var(--color-green);
+    }
+  }
+
+  /* hero section */
+  .hero {
+    flex-direction: row;
+    text-align: start;
+    justify-content: space-between;
+    margin: 50px 80px;
+  }
+
+  .hero-company {
+    display: none;
+  }
+
+  .hero-text {
+    font-size: 60px;
+  }
+
+  .hero-btn {
+    width: 25%;
+    &:hover {
+      background: none;
+      color: var(--color-black);
+      border: 1px solid var(--color-green);
+      font-weight: bolder;
+      font-size: 14px;
+      text-align: center;
+    }
+    &:hover img {
+      display: none;
+    }
+  }
+
+  .hero-img {
+    width: 350px;
+  }
+
+  .hero-company-desktop {
+    display: flex;
+    gap: 20px;
+    margin-top: 30%;
+  }
+
+  .hero-divider,
+  .services-divider {
+    margin-top: 7%;
+    width: 70%;
+  }
+
+  .overlap-1 {
+    top: -265px;
+    left: -24%;
+  }
+
+  .overlap-2 {
+    top: -342px;
+    left: 57%;
+  }
+
+  /* services section */
+  .services {
+    flex-direction: row;
+    justify-content: center;
+    gap: 130px;
+  }
+
+  .services-box-1,
+  .services-box-2 {
+    display: flex;
+    gap: 130px;
+  }
+
+  /* benefit section */
+  .benefit {
+    flex-direction: row;
+  }
+
+  .benefit-2 {
+    flex-direction: row-reverse;
+  }
+
+  .benefit,
+  .benefit-2 {
+    margin: 30px 20px 0 20px;
+    background: none;
+    gap: 150px;
+  }
+
+  .benefit-text {
+    text-align: start;
+  }
+
+  .benefit-text h3 {
+    font-size: 45px;
+    font-weight: 500;
+    width: 75%;
+  }
+
+  .benefit-text ul {
+    margin-left: 0;
+  }
+
+  .benefit .benefit-1,
+  .benefit-2 .benefit-2 {
+    width: 400px;
+  }
+
+  .benefit-stats {
+    display: flex;
+    gap: 20px;
+  }
+
+  img.benefit-2 {
+    padding-right: 20px;
+  }
+
+  /* variety section */
+  .cards-1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 25px 90px 0 90px;
+  }
+
+  .cards-2 {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    margin: 0 90px;
+  }
+
+  .variety .text h3 {
+    font-size: 45px;
+    font-weight: 500;
+  }
+
+  .after-food {
+    margin: 0;
+    height: 291px;
+  }
+
+  .after-food button {
+    &:hover {
+      border: none;
+      background-color: var(--color-green);
+      color: var(--color-secondary);
+    }
+    &:hover img {
+      display: none;
+    }
+  }
+
+  /* product section */
 }
