--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@
   margin: 22px 0;
 }
 
-.hero-btn {
+.hero-btn,
+.add button {
   background-color: var(--color-green);
   color: var(--color-secondary);
   padding: 20px;
@@ -151,7 +152,8 @@
   width: 80%;
 }
 
-.hero-btn img {
+.hero-btn img,
+.add button img {
   width: auto;
   background: none;
   padding-left: 5px;
@@ -294,7 +296,8 @@
   margin-top: 10px;
 }
 
-.after-food button {
+.after-food button,
+.product-card button {
   outline: none;
   border: 1px solid var(--color-green);
   margin-top: 10px;
@@ -315,15 +318,148 @@
   margin-top: 10px;
 }
 
-.cards-1 >div> img,
+.cards-1 > img,
 .cards-2 > img {
   width: 400px;
 }
 
 /* product section */
+.product .text {
+  text-align: center;
+  margin-top: 15px;
+}
 
+.product .text > p {
+  margin-bottom: 5px;
+}
 
+.product .text h3 {
+  font-size: 35px;
+  font-weight: 450;
+  text-transform: capitalize;
+  margin-bottom: 8px;
+}
 
+.product-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  text-align: center;
+  border: 1px solid var(--color-green);
+  border-radius: 3px;
+  padding: 40px;
+  width: 300px;
+}
+
+.product-card img:nth-of-type(0) {
+  width: 60%;
+}
+
+.product-card img:nth-of-type(2) {
+  width: 45%;
+  align-self: center;
+  margin-top: 20px;
+}
+
+.product-card h4 {
+  margin-top: 10px;
+}
+
+.product-card p {
+  margin: 10px 0;
+  color: var(--color-green);
+}
+
+.product-card del {
+  color: var(--color-black);
+  opacity: 40%;
+}
+
+.product-card button {
+  margin-top: 10px;
+}
+
+/* add section */
+.add {
+  margin: 65px 0;
+  background-image: url(./img/bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 545px;
+  position: relative;
+}
+
+.add h2 {
+  width: 60%;
+  font-size: 40px;
+  text-transform: capitalize;
+  color: var(--color-secondary);
+  display: inline-flex;
+  background: none;
+  position: absolute;
+  top: 27%;
+  right: 20%;
+}
+
+.add button {
+  position: absolute;
+  top: 76%;
+  right: 10%;
+}
+
+/* footer section */
+footer {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.part-1 .logo {
+  margin-bottom: 30px;
+}
+
+footer p,
+footer h3 {
+  margin-bottom: 30px;
+}
+
+.social {
+  margin-bottom: 50px;
+}
+
+footer ul {
+  text-align: center;
+  list-style-type: none;
+  line-height: 30px;
+}
+
+footer h3 {
+  font-size: 24px;
+}
+
+#email {
+  background-color: rgb(153, 149, 149);
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  padding: 20px;
+  width: 40%;
+}
+
+.contact button {
+  width: 40%;
+}
+
+.copy-mb {
+  margin-top: 20px;
+  opacity: 60%;
+}
 
 /* desktop design */
 
@@ -498,7 +634,8 @@
     height: 291px;
   }
 
-  .after-food button {
+  .after-food button,
+  .product-card button {
     &:hover {
       border: none;
       background-color: var(--color-green);
@@ -510,4 +647,66 @@
   }
 
   /* product section */
+  .product .text {
+    text-align: start;
+  }
+
+  .product-container {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .product .text > p {
+    margin: 50px 0 30px 100px;
+  }
+
+  .product .text > h3 {
+    margin: 0 0 20px 100px;
+  }
+
+  .product-card {
+    width: 260px;
+  }
+
+  /* add section */
+  .add {
+    margin: 95px 6.5%;
+  }
+
+  .add h2 {
+    top: 22%;
+    right: 16%;
+    width: 59%;
+    font-size: 59px;
+  }
+
+  .add button {
+    top: 80%;
+    right: 40%;
+    width: 23%;
+  }
+
+  /* footer section */
+  .copy-mb {
+    display: none;
+  }
+
+  footer {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  footer > * {
+    width: 20%;
+  }
+
+  .part-1 {
+    margin-top: 50px;
+  }
+
+  .part-4 {
+    margin-top: 8px;
+    width: 30%;
+  }
 }
